feat: data frame show and vm option